[tool.poetry]
name = "rrchnm-cicd-django-test"
version = "0.1.0"
description = "My RRCHNM Django Project: Lorem ipsum dolor sit amet"
authors = ["Foo Bar <foo@bar.net>"]
license = "MIT"
readme = "README.md"
#requires-python = ">=3.12"
packages = [{include = "django_test"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
daphne = "^4.1.2"
whitenoise = "^6.8.2"
django = "^5.1.4"
django-environ = "^0.12.0"
# allauth
django-allauth = {version="^65.3.1", extras=["orcid", "slack", "github"]}

django-tailwind = "^4.0.1"

# postgres
psycopg2 = "^2.9.10"

# obj storage
django-storages = "^1.14.4"
boto3 = "^1.35.94"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
djhtml = "^3.0.7"
pre-commit = "^4.0.1"
django-debug-toolbar = "^5.1.0"
pytest-django = "^4.9.0"
pylint-django = "^2.6.1"

